--- a/scss/1-Atoms/main.scss
+++ b/scss/1-Atoms/main.scss
@@ -7,7 +7,7 @@
 
 
 .button-container {
-  margin-top: 142px;
+  margin-top: 140px;
   margin-left: auto;
   margin-right: auto;
   width: 240px;
