--- a/scss/2-Molecules/_main-header-nav.scss
+++ b/scss/2-Molecules/_main-header-nav.scss
@@ -19,9 +19,17 @@
   padding-right: 55px;
   color: $white;
 }
-.back-button {
-
+.back-icon {
+  font-family: FranchiseFree;
+  font-size: 20px;
+  font-style: normal;
+  font-stretch: normal;
+  color: $white;
 }
-.cart-button {
-
+.cart-icon {
+  font-family: FranchiseFree;
+  font-size: 20px;
+  font-style: normal;
+  font-stretch: normal;
+  color: $white;
 }
